# Test_DocuSketch

./: app.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt  scripts.py
