[tool.poetry]
name = "test-docusketch"
version = "0.1.0"
description = ""
authors = ["Kiryl Shvedau <80332673+Svensson17@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
pymongo = "^4.6.3"
psutil = "^5.9.8"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
